fix: z-index e scroll-margin

--- a/style.css
+++ b/style.css
@@ -24,10 +24,15 @@ body {
 }
 
 .blur {
-  background-color: #010413;
   width: 100%;
   height: 50px;
-  filter: blur(200px);
+  background: linear-gradient(
+    to bottom,
+    #030716 0%,
+    #01010a 100%
+  );
+  filter: blur(20px);
+  z-index: 500;
 }
 
 /* INICIO DO HEADER */
@@ -186,6 +191,7 @@ section:nth-child(odd) {
   #mobile-header {
     display: flex;
     position: fixed;
+    z-index: 1000;
     padding: 0.5rem 0;
     flex-direction: column;
     justify-content: space-between;
@@ -239,6 +245,7 @@ section:nth-child(odd) {
     display: flex;
     flex-direction: column;
     padding: 0 20px;
+    scroll-margin-top: 70px;
   }
 
   .inicio {
@@ -247,6 +254,11 @@ section:nth-child(odd) {
 
   .inicio h1 {
     margin-top: -100px;
+    font-size: 50px;
+  }
+
+  .inicio p {
+    font-size: 15px;
   }
 
   .text {
